# ethcolor

./: .gitignore  Examples.md  LICENSE  README.md  __init__.py  colorblind.py  formats.py  optimization.py  palettes.py  pyproject.toml  requirements.txt  util.py
src/ethcolor/: __init__.py  colorblind.py  formats.py  optimization.py  palettes.py  util.py
