[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src"]

[project]
name = "ethcolor"
version = "0.0.1"
authors = [
  { name="Erik Thordsen", email="erik.thordsen@tu-dortmund.de" },
]
description = "A basic python package to generate, organize, expand, and optimize accessible color palettes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/eth42/ethcolor"
Issues = "https://github.com/eth42/ethcolor/issues"